
===========================================================================
MARK: released gwenhywfar-3.1.1 (2008/02/10)
===========================================================================


2008/02/10: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in ctfile.c (now ignores modulus and exponent in
  GWEN_Crypt_TokenFile__SetKeyInfo())
  Now gct-tool setsignseq works again with OpenHBCI keyfiles.


2008/01/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/msgengine.c: decreased verbosity


===========================================================================
MARK: released gwenhywfar-3.1.0 (2008/01/25)
===========================================================================


2008/01/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/buffer.c: fixed a bug in IO mode


2008/01/15: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in src/parser/text.c whiche prevented the CSV plugin from
  reading lines with empty fields when using TAB as a delimiter
- gwentime_all.c: decrease verbosity


2008/01/08: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed GWEN_XML_ReadFromFastBuffer(): no longer requires the function
  GWEN_XmlCtx_GetCurrentNode(), so we really can write new XML context
  implementations which do not use XML nodes (e.g. for the new OFX parser)
- fixed a bug in GWEN_XML__ReadTag(): was not calling endTagFn for tags
  beginning with "/"


2007/12/18: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- applied a small patch by Andreas Steinmetz which fixes a bug in
  src/os/inetsocket.c


2007/12/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added GWEN_IDLIST64_ITERATOR which deprecates the following functions: