@@ -1,4 +1,11 @@
 
+2008/02/15: Martin Preuss<martin@libchipcard.de>
+------------------------------------------------
+- added GWEN_HttpSession: This module is a wrapper around the various
+  io layers. It very much simplifies sending requests and receiving 
+  responses and will be used by some of AqBanking's backends.
+
+
 ===========================================================================
 MARK: released gwenhywfar-3.1.1 (2008/02/10)
 ===========================================================================
